hardware/kinect/src/main/java/org/openimaj/hardware/kinect/freenect/libfreenectLibrary.java


	static {
		Platform.addEmbeddedLibraryResourceRoot("org/openimaj/hardware/kinect/nativelib/");
		BridJ.register();
	}
	public enum freenect_device_flags implements IntValuedEnum<freenect_device_flags > {
		FREENECT_DEVICE_MOTOR(0x1),
		FREENECT_DEVICE_CAMERA(0x2),
		FREENECT_DEVICE_AUDIO(0x4);
		freenect_device_flags(long value) {
			this.value = value;
		}
		public final long value;
		@Override
		public long value() {
			return this.value;
		}
		@Override
		public Iterator<freenect_device_flags > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static ValuedEnum<freenect_device_flags > fromValue(long value) {
			return FlagSet.fromValue(value, values());
		}
	};
	public enum freenect_resolution implements IntValuedEnum<freenect_resolution > {
		FREENECT_RESOLUTION_LOW(0),
		FREENECT_RESOLUTION_MEDIUM(1),
		FREENECT_RESOLUTION_HIGH(2),
		FREENECT_RESOLUTION_DUMMY(2147483647);
		freenect_resolution(long value) {
			this.value = value;
		}
		public final long value;
		@Override
		public long value() {
			return this.value;
		}
		@Override
		public Iterator<freenect_resolution > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static ValuedEnum<freenect_resolution > fromValue(long value) {
			return FlagSet.fromValue(value, values());
		}
	};
	public enum freenect_video_format implements IntValuedEnum<freenect_video_format > {
		FREENECT_VIDEO_RGB(0),
		FREENECT_VIDEO_BAYER(1),
		FREENECT_VIDEO_IR_8BIT(2),
		FREENECT_VIDEO_IR_10BIT(3),
		FREENECT_VIDEO_IR_10BIT_PACKED(4),
		FREENECT_VIDEO_YUV_RGB(5),
		FREENECT_VIDEO_YUV_RAW(6),
		FREENECT_VIDEO_DUMMY(2147483647);
		freenect_video_format(long value) {
			this.value = value;
		}
		public final long value;
		@Override
		public long value() {
			return this.value;
		}
		@Override
		public Iterator<freenect_video_format > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static ValuedEnum<freenect_video_format > fromValue(long value) {
			return FlagSet.fromValue(value, values());
		}
	};
	public enum freenect_depth_format implements IntValuedEnum<freenect_depth_format > {
		FREENECT_DEPTH_11BIT(0),
		FREENECT_DEPTH_10BIT(1),
		FREENECT_DEPTH_11BIT_PACKED(2),
		FREENECT_DEPTH_10BIT_PACKED(3),
		FREENECT_DEPTH_DUMMY(2147483647);
		freenect_depth_format(long value) {
			this.value = value;
		}
		public final long value;
		@Override
		public long value() {
			return this.value;
		}
		@Override
		public Iterator<freenect_depth_format > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static ValuedEnum<freenect_depth_format > fromValue(long value) {
			return FlagSet.fromValue(value, values());
		}
	};
	public enum freenect_led_options implements IntValuedEnum<freenect_led_options > {
		LED_OFF(0),
		LED_GREEN(1),
		LED_RED(2),
		LED_YELLOW(3),
		LED_BLINK_GREEN(4),
		LED_BLINK_RED_YELLOW(6);
		freenect_led_options(long value) {
			this.value = value;
		}
		public final long value;
		@Override
		public long value() {
			return this.value;
		}
		@Override
		public Iterator<freenect_led_options > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static ValuedEnum<freenect_led_options > fromValue(long value) {
			return FlagSet.fromValue(value, values());
		}
	};
	public enum freenect_tilt_status_code implements IntValuedEnum<freenect_tilt_status_code > {
		TILT_STATUS_STOPPED(0x0),
		TILT_STATUS_LIMIT(0x1),
		TILT_STATUS_MOVING(0x4);
		freenect_tilt_status_code(long value) {
			this.value = value;
		}
		public final long value;
		@Override
		public long value() {
			return this.value;
		}
		@Override
		public Iterator<freenect_tilt_status_code > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static ValuedEnum<freenect_tilt_status_code > fromValue(long value) {
			return FlagSet.fromValue(value, values());
		}
	};
	public enum freenect_loglevel implements IntValuedEnum<freenect_loglevel > {
		FREENECT_LOG_FATAL(0),
		FREENECT_LOG_ERROR(1),
		FREENECT_LOG_WARNING(2),
		FREENECT_LOG_NOTICE(3),
		FREENECT_LOG_INFO(4),
		FREENECT_LOG_DEBUG(5),
		FREENECT_LOG_SPEW(6),
		FREENECT_LOG_FLOOD(7);
		freenect_loglevel(long value) {
			this.value = value;
		}
		public final long value;
		@Override
		public long value() {
			return this.value;
		}
		@Override
		public Iterator<freenect_loglevel > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static ValuedEnum<freenect_loglevel > fromValue(long value) {
			return FlagSet.fromValue(value, values());
		}
	};
	public static final int FREENECT_COUNTS_PER_G = (int)819;
	/**
	 * Typedef for logging callback functions<br>
	 * <i>native declaration : /usr/include/stdint.h</i>
	 */
	public static abstract class freenect_log_cb extends Callback<freenect_log_cb > {
		public abstract void apply(Pointer<libfreenectLibrary.freenect_context > dev, ValuedEnum<libfreenectLibrary.freenect_loglevel > level, Pointer<Byte > msg);
	};
	/**
	 * Typedef for depth image received event callbacks<br>
	 * <i>native declaration : /usr/include/stdint.h</i>
	 */
	public static abstract class freenect_depth_cb extends Callback<freenect_depth_cb > {
		public abstract void apply(Pointer<libfreenectLibrary.freenect_device > dev, Pointer<? > depth, int timestamp);
	};
	/**
	 * Typedef for video image received event callbacks<br>
	 * <i>native declaration : /usr/include/stdint.h</i>
	 */
	public static abstract class freenect_video_cb extends Callback<freenect_video_cb > {
		public abstract void apply(Pointer<libfreenectLibrary.freenect_device > dev, Pointer<? > video, int timestamp);
	};
	public static native int freenect_init(Pointer<Pointer<libfreenectLibrary.freenect_context > > ctx, Pointer<? > usb_ctx);
	public static native int freenect_shutdown(Pointer<libfreenectLibrary.freenect_context > ctx);
	public static native void freenect_set_log_level(Pointer<libfreenectLibrary.freenect_context > ctx, ValuedEnum<libfreenectLibrary.freenect_loglevel > level);
	public static native void freenect_set_log_callback(Pointer<libfreenectLibrary.freenect_context > ctx, Pointer<libfreenectLibrary.freenect_log_cb > cb);
	public static native int freenect_process_events(Pointer<libfreenectLibrary.freenect_context > ctx);
	public static native int freenect_num_devices(Pointer<libfreenectLibrary.freenect_context > ctx);
	public static native void freenect_select_subdevices(Pointer<libfreenectLibrary.freenect_context > ctx, ValuedEnum<libfreenectLibrary.freenect_device_flags > subdevs);
	public static native int freenect_open_device(Pointer<libfreenectLibrary.freenect_context > ctx, Pointer<Pointer<libfreenectLibrary.freenect_device > > dev, int index);
	public static native int freenect_close_device(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native void freenect_set_user(Pointer<libfreenectLibrary.freenect_device > dev, Pointer<? > user);
	public static native Pointer<? > freenect_get_user(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native void freenect_set_depth_callback(Pointer<libfreenectLibrary.freenect_device > dev, Pointer<libfreenectLibrary.freenect_depth_cb > cb);
	public static native void freenect_set_video_callback(Pointer<libfreenectLibrary.freenect_device > dev, Pointer<libfreenectLibrary.freenect_video_cb > cb);
	public static native int freenect_set_depth_buffer(Pointer<libfreenectLibrary.freenect_device > dev, Pointer<? > buf);
	public static native int freenect_set_video_buffer(Pointer<libfreenectLibrary.freenect_device > dev, Pointer<? > buf);
	public static native int freenect_start_depth(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native int freenect_start_video(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native int freenect_stop_depth(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native int freenect_stop_video(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native int freenect_update_tilt_state(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native Pointer<freenect_raw_tilt_state > freenect_get_tilt_state(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native double freenect_get_tilt_degs(Pointer<freenect_raw_tilt_state > state);
	public static native int freenect_set_tilt_degs(Pointer<libfreenectLibrary.freenect_device > dev, double angle);
	public static native ValuedEnum<libfreenectLibrary.freenect_tilt_status_code > freenect_get_tilt_status(Pointer<freenect_raw_tilt_state > state);
	public static native int freenect_set_led(Pointer<libfreenectLibrary.freenect_device > dev, ValuedEnum<libfreenectLibrary.freenect_led_options > option);
	public static native void freenect_get_mks_accel(Pointer<freenect_raw_tilt_state > state, Pointer<Double > x, Pointer<Double > y, Pointer<Double > z);
	public static native int freenect_get_video_mode_count();
	public static native freenect_frame_mode freenect_get_video_mode(int mode_num);
	public static native freenect_frame_mode freenect_get_current_video_mode(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native freenect_frame_mode freenect_find_video_mode(ValuedEnum<libfreenectLibrary.freenect_resolution > res, ValuedEnum<libfreenectLibrary.freenect_video_format > fmt);
	public static native int freenect_set_video_mode(Pointer<libfreenectLibrary.freenect_device > dev, freenect_frame_mode mode);
	public static native int freenect_set_video_mode_proxy(Pointer<libfreenectLibrary.freenect_device > dev, ValuedEnum<libfreenectLibrary.freenect_resolution > res, ValuedEnum<libfreenectLibrary.freenect_video_format > fmt);
	public static native int freenect_get_depth_mode_count();
	public static native freenect_frame_mode freenect_get_depth_mode(int mode_num);
	public static native freenect_frame_mode freenect_get_current_depth_mode(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native freenect_frame_mode freenect_find_depth_mode(ValuedEnum<libfreenectLibrary.freenect_resolution > res, ValuedEnum<libfreenectLibrary.freenect_depth_format > fmt);
	public static native int freenect_set_depth_mode(Pointer<libfreenectLibrary.freenect_device > dev, freenect_frame_mode mode);
	public static native int freenect_set_depth_mode_proxy(Pointer<libfreenectLibrary.freenect_device > dev, ValuedEnum<libfreenectLibrary.freenect_resolution > res, ValuedEnum<libfreenectLibrary.freenect_depth_format > fmt);
	public static native int freenect_get_video_buffer_size(Pointer<libfreenectLibrary.freenect_device > dev);
	public static native int freenect_get_depth_buffer_size(Pointer<libfreenectLibrary.freenect_device > dev);
	/// Undefined type
	public static interface freenect_device {
		
	};
	/// Undefined type
	public static interface freenect_context {
		
	};
}
